--- a/app/src/main/res/layout/offer_item_home.xml
+++ b/app/src/main/res/layout/offer_item_home.xml
@@ -113,6 +113,68 @@
 
         </LinearLayout>
 
+        <LinearLayout
+            android:id="@+id/ll_position_details"
+            android:visibility="gone"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="12dp"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/tv_position_title"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Ingénieur support et développement logiciel - Remote"
+                android:textColor="@color/black"
+                android:textStyle="bold" />
+
+            <LinearLayout
+                android:id="@+id/ll_company_details"
+                android:visibility="gone"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:gravity="center_vertical"
+                android:orientation="horizontal">
+
+                <androidx.cardview.widget.CardView
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginRight="14dp"
+                    android:elevation="0dp"
+                    app:cardCornerRadius="40dp">
+
+                    <ImageView
+                        android:id="@+id/iv_company_logo"
+                        android:layout_width="50dp"
+                        android:layout_height="50dp"
+                        android:scaleType="centerCrop"
+                        android:src="@drawable/ic_launcher_background" />
+                </androidx.cardview.widget.CardView>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:id="@+id/tv_company_name"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Entreprise"
+                        android:textColor="@color/black" />
+
+                    <TextView
+                        android:id="@+id/tv_company_location"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Rabat, Rabat-Salé-Kenitra, Morocco (Hybrid)" />
+                </LinearLayout>
+            </LinearLayout>
+        </LinearLayout>
+
         <TextView
             android:id="@+id/tv_body"
             android:layout_width="wrap_content"
@@ -122,6 +184,14 @@
             android:paddingVertical="8dp"
             android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer bibendum ipsum sed neque finibus, sed commodo nunc accumsan. Fusce malesuada pretium felis ut iaculis. Fusce bibendum dapibus pellentesque. In et mauris augue. Praesent porttitor arcu vel erat fringilla accums"
             android:textSize="14sp" />
+
+        <ImageView
+            android:id="@+id/iv_blog_image"
+            android:layout_width="match_parent"
+            android:layout_height="180dp"
+            android:visibility="gone"
+            android:scaleType="centerCrop"
+            android:layout_marginBottom="8dp" />
 
         <TextView
             android:id="@+id/tv_tags"
