fix: fixed layout paddings

--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -59,7 +59,7 @@
                 android:layout_marginTop="110dp"
                 android:background="@drawable/circle_background"
                 android:contentDescription="@string/user_profile_image"
-                android:padding="16dp"
+                android:layout_marginStart="@dimen/activity_horizontal_margin"
                 android:scaleType="centerCrop" />
 
 
@@ -69,9 +69,8 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@id/userProfileImage"
                 android:orientation="vertical"
-                android:paddingLeft="16dp"
                 android:paddingTop="5dp"
-                android:paddingRight="16dp">
+                android:layout_marginHorizontal="@dimen/activity_horizontal_margin">
 
                 <TextView
                     android:id="@+id/userName"
@@ -111,11 +110,11 @@
                 android:id="@+id/btnModifyProfile"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                style="@style/ButtonPrimarySecondary"
+                style="@style/ButtonPrimarySecondarySmall"
                 android:layout_below="@id/bannerImage"
                 android:layout_alignEnd="@id/bannerImage"
                 android:layout_marginTop="10dp"
-                android:layout_marginRight="10dp"
+                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                 android:text="@string/modify_my_profile" />
 
             <TextView
@@ -123,8 +122,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/linear_layout"
-                android:layout_marginTop="8dp"
-                android:padding="16dp"
+                android:layout_marginTop="24dp"
+                android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
                 android:text="@string/static_description"
                 android:textSize="14sp" />
 
@@ -135,7 +134,8 @@
                 android:layout_height="48dp"
                 style="@style/ButtonPrimary"
                 android:layout_below="@+id/userDescription"
-                android:layout_marginHorizontal="16dp"
+                android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
+                android:layout_marginTop="24dp"
                 android:layout_marginBottom="16dp"
                 android:text="@string/voir_le_cv" />
 
@@ -145,7 +145,8 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@id/resumebtn"
                 android:orientation="vertical"
-                android:padding="16dp">
+                android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
+                android:paddingVertical="16dp">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -170,8 +171,7 @@
                         android:id="@+id/modify_experience_button"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        style="@style/ButtonPrimarySecondary"
-                        android:textSize="12sp"
+                        style="@style/ButtonPrimarySecondarySmall"
                         android:text="@string/button_text" />
 
 
@@ -193,7 +193,8 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@id/experiencesContainer"
                 android:orientation="vertical"
-                android:padding="16dp">
+                android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
+                android:paddingVertical="16dp">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -218,8 +219,7 @@
                         android:id="@+id/modify_education_button"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        style="@style/ButtonPrimarySecondary"
-                        android:textSize="12sp"
+                        style="@style/ButtonPrimarySecondarySmall"
                         android:text="@string/button_text" />
 
 
@@ -238,7 +238,8 @@
                 android:layout_height="match_parent"
                 android:layout_below="@id/parcoursContainer"
                 android:orientation="vertical"
-                android:padding="16dp">
+                android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
+                android:paddingVertical="16dp">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -263,8 +264,7 @@
                         android:id="@+id/modify_skills_button"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        style="@style/ButtonPrimarySecondary"
-                        android:textSize="12sp"
+                        style="@style/ButtonPrimarySecondarySmall"
                         android:text="@string/button_text" />
 
 
