--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -79,6 +79,14 @@
         <item name="android:textColor">@color/primary</item>
     </style>
 
+    <style name="ButtonPrimarySecondarySmall" parent="ButtonPrimarySecondary">
+        <item name="android:paddingTop">6dp</item>
+        <item name="android:paddingBottom">6dp</item>
+        <item name="android:paddingStart">12dp</item>
+        <item name="android:paddingEnd">12dp</item>
+        <item name="android:textSize">12sp</item>
+    </style>
+
     <style name="ButtonDanger" parent="ButtonBase">
         <item name="android:background">@drawable/button_danger_background</item>
         <item name="android:textColor">@color/white</item>
