--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -58,6 +58,11 @@
         <item name="android:layout_marginBottom">16dp</item>
     </style>
 
+    <style name="circleImageView" parent="">
+        <item name="cornerFamily">rounded</item>
+        <item name="cornerSize">50%</item>
+    </style>
+
     <!--  Buttons  -->
     <style name="ButtonBase" parent="Widget.AppCompat.Button">
         <item name="android:paddingStart">16dp</item>
