--- a/app/src/main/res/layout/expereince_fragment.xml
+++ b/app/src/main/res/layout/expereince_fragment.xml
@@ -1,82 +1,81 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:padding="10dp"
     android:layout_marginTop="10dp"
-    android:background="@android:color/white">
+    android:background="@color/white"
+    app:cardCornerRadius="12dp">
 
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-        android:gravity="right"
-    android:orientation="horizontal">
-
-
-    <ImageView
-        android:id="@+id/iconEdit"
-        android:layout_width="20dp"
-        android:layout_height="20dp"
-        android:src="@drawable/edit_icon"
-        android:layout_marginRight="8dp"
-        android:tint="@color/purple_500"
-        android:contentDescription="Edit" />
-
-    <ImageView
-        android:id="@+id/iconDelete"
-        android:layout_width="20dp"
-        android:layout_height="20dp"
-        android:src="@drawable/delete_icon"
-        android:tint="@color/error"
-        android:contentDescription="Delete" />
-    </LinearLayout>
-
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="vertical"
+        android:padding="10dp">
 
+        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="right"
+            android:orientation="horizontal">
 
+            <ImageView
+                android:id="@+id/iconEdit"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:src="@drawable/edit_icon"
+                android:layout_marginRight="8dp"
+                android:contentDescription="Edit"
+                app:tint="@color/purple_500" />
 
+            <ImageView
+                android:id="@+id/iconDelete"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:src="@drawable/delete_icon"
+                android:contentDescription="Delete"
+                app:tint="@color/error" />
+        </LinearLayout>
 
+        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/experienceTitle"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="@string/experience_title"
+                android:textSize="16sp"
+                android:textColor="@color/grey_700"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/experiencePeriod"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/experience_date"
+                android:textColor="@color/grey_700"
+                android:textSize="12sp" />
+        </LinearLayout>
 
         <TextView
-            android:id="@+id/experienceTitle"
-            android:layout_width="0dp"
+            android:id="@+id/companyLocation"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="@string/experience_title"
-            android:textSize="16sp"
-            android:textColor="@color/grey_700"
-            android:textStyle="bold" />
+            android:text="@string/company_location"
+            android:paddingBottom="8dp"
+            android:textSize="14sp" />
 
         <TextView
-            android:id="@+id/experiencePeriod"
-            android:layout_width="wrap_content"
+            android:id="@+id/experienceDescription"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/experience_date"
-            android:textColor="@color/grey_700"
-            android:textSize="12sp" />
+            android:text="@string/static_description"
+            android:textSize="14sp" />
+
     </LinearLayout>
 
-    <TextView
-        android:id="@+id/companyLocation"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/company_location"
-        android:paddingBottom="8dp"
-        android:textSize="14sp" />
-
-
-    <TextView
-        android:id="@+id/experienceDescription"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/static_description"
-        android:textSize="14sp" />
-
-
-
-</LinearLayout>
+</androidx.cardview.widget.CardView>
