this is all you need to create a new job post

--- a/app/src/main/res/xml/root_preferences.xml
+++ b/app/src/main/res/xml/root_preferences.xml
@@ -6,7 +6,9 @@
         <SwitchPreferenceCompat
             app:key="Darkmode"
             app:title="Dark Mode" />
-
+        <SwitchPreferenceCompat
+            app:key="ActivateAccount"
+            app:title="Acctivate Account" />
         <SwitchPreferenceCompat
             app:key="2FA"
             app:title="2FA" />
