refact: refactoring the presentation layer

--- a/app/src/main/res/layout/activity_create_question.xml
+++ b/app/src/main/res/layout/activity_create_question.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".view.create_question_screen.CreateQuestionActivity"
+    tools:context=".presentation.question_post.create.CreateQuestionActivity"
     android:background="@color/background_light">
 
     <LinearLayout
