--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/firstfragment"
-    tools:context=".view.create_jobpost_screen.Fragments.DetailsFragment">
+    tools:context=".presentation.job_post.create.fragments.DetailsFragment">
 
     <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
@@ -19,7 +19,7 @@
             android:paddingHorizontal="32dp"
             android:paddingVertical="64dp"
             android:background="@color/background"
-            tools:context=".view.create_jobpost_screen.CreateJobPostActivity">
+            tools:context=".presentation.job_post.create.JobPostCreateActivity">
 
             <TextView
                 android:layout_width="wrap_content"
