--- a/app/src/main/res/layout/activity_modify_profile_experience.xml
+++ b/app/src/main/res/layout/activity_modify_profile_experience.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.Profile.ModifyProfileExperience"
+    tools:context=".presentation.profile.ExperienceEditActivity"
     android:background="@color/background_light">
 
     <com.google.android.material.appbar.AppBarLayout
