--- a/app/src/main/res/layout/activity_testing.xml
+++ b/app/src/main/res/layout/activity_testing.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.Testing.TestingActivity"
+    tools:context=".presentation.testing.TestingActivity"
     android:paddingVertical="@dimen/activity_vertical_margin"
     android:paddingHorizontal="@dimen/activity_horizontal_margin">
 
