--- a/app/src/main/res/layout/fragment_post_category.xml
+++ b/app/src/main/res/layout/fragment_post_category.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.home.PostCategoryFragment">
+    tools:context=".presentation.home.PostCategoryFragment">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_all_offers"
