--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -7,13 +7,13 @@
 
     <fragment
         android:id="@+id/nav_home"
-        android:name="com.ensak.connect.view.home.HomeFragment"
+        android:name="com.ensak.connect.presentation.home.HomeFragment"
         android:label="@string/menu_home"
         tools:layout="@layout/fragment_home" />
 
     <fragment
         android:id="@+id/nav_post_category"
-        android:name="com.ensak.connect.view.home.PostCategoryFragment"
+        android:name="com.ensak.connect.presentation.home.PostCategoryFragment"
         android:label="Category"
         tools:layout="@layout/fragment_post_category" />
 </navigation>
