--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -8,11 +8,11 @@
         android:checkableBehavior="single">
         <item
             android:id="@+id/nav_home"
-            android:icon="@drawable/home"
+            android:icon="@drawable/ic_home"
             android:title="Acceuil" />
         <item
             android:id="@+id/nav_work_offers"
-            android:icon="@drawable/briefcase"
+            android:icon="@drawable/ic_briefcase"
             android:title="Offres d'emploi" />
         <item
             android:id="@+id/nav_inter_offers"
@@ -21,7 +21,7 @@
 
         <item
             android:id="@+id/nav_doctorat_offers"
-            android:icon="@drawable/book"
+            android:icon="@drawable/ic_book"
             android:title="Offres de doctorats" />
         <item
             android:id="@+id/nav_blog"
@@ -42,7 +42,7 @@
             android:title="Mon profil" />
         <item
             android:id="@+id/nav_messages"
-            android:icon="@drawable/chat"
+            android:icon="@drawable/ic_chat"
             android:title="Messages" />
         <item
             android:id="@+id/nav_notifications"
