--- a/app/src/main/res/layout/auth_change_password_activity.xml
+++ b/app/src/main/res/layout/auth_change_password_activity.xml
@@ -9,7 +9,7 @@
         android:id="@+id/imageViewLock"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/lock_icon"
+        android:src="@drawable/ic_lock"
         android:layout_gravity="center"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="64dp"
@@ -54,7 +54,7 @@
             android:id="@+id/passwordChange"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/edittext_bg"
+            android:background="@drawable/app_edittext_bg"
             android:padding="8dp"
             android:inputType="textPassword"
             android:hint="New Password" />
@@ -78,7 +78,7 @@
             android:id="@+id/ConfirmedPassword"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/edittext_bg"
+            android:background="@drawable/app_edittext_bg"
             android:padding="8dp"
             android:inputType="textPassword"
             android:hint="Confirm Password" />
@@ -88,7 +88,7 @@
         android:id="@+id/btnConfirmChange"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/edittext_bg"
+        android:background="@drawable/app_edittext_bg"
         android:text="Confirm"
         android:layout_marginTop="24dp" />
 
