--- a/app/src/main/res/layout/auth_login_activity.xml
+++ b/app/src/main/res/layout/auth_login_activity.xml
@@ -16,7 +16,7 @@
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="90dp"
-            android:src="@drawable/logo_ensak_connect"
+            android:src="@drawable/app_logo"
             android:layout_marginBottom="48dp"/>
 
         <TextView
