--- a/app/src/main/res/layout/notification_activity.xml
+++ b/app/src/main/res/layout/notification_activity.xml
@@ -43,7 +43,7 @@
             android:layout_weight="1"
             android:scrollbars="vertical"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-            tools:listitem="@layout/notificationitem" />
+            tools:listitem="@layout/notification_item" />
 
 
     </RelativeLayout>
