--- a/app/src/main/res/layout/testing_activity.xml
+++ b/app/src/main/res/layout/testing_activity.xml
@@ -24,7 +24,7 @@
             android:layout_width="wrap_content"
             android:layout_height="130dp"
             android:background="@color/background"
-            android:src="@drawable/logo_ensak_connect"
+            android:src="@drawable/app_logo"
             android:padding="24dp"
             android:layout_marginBottom="24dp"/>
 
