--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/nav_home"
-        android:name="com.ensak.connect.presentation.home.HomeFragment"
+        android:name="com.ensak.connect.presentation.home.FeedFragment"
         android:label="@string/menu_home"
         tools:layout="@layout/main_home_fragement" />
 
