--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -38,7 +38,7 @@
     <style name="CustomButton" parent="Widget.AppCompat.Button">
         <item name="android:textSize">10sp</item>
         <item name="android:textColor">@color/primary</item>
-        <item name="android:background">@drawable/app_button_lighpurple</item>
+        <item name="android:background">@drawable/lighpurple_button</item>
         <item name="android:minHeight">0dp</item>
         <item name="android:minWidth">0dp</item>
         <item name="android:padding">10sp</item>
@@ -54,7 +54,7 @@
         <item name="android:layout_width">120dp</item>
         <item name="android:layout_height">48dp</item>
         <item name="android:text">@string/se_connecter</item>
-        <item name="android:background">@drawable/app_button_background</item>
+        <item name="android:background">@drawable/button_style</item>
         <item name="android:layout_marginBottom">16dp</item>
     </style>
 
@@ -75,12 +75,12 @@
     </style>
 
     <style name="ButtonPrimary" parent="ButtonBase">
-        <item name="android:background">@drawable/app_button_background</item>
+        <item name="android:background">@drawable/button_style</item>
         <item name="android:textColor">@color/white</item>
     </style>
 
     <style name="ButtonPrimarySecondary" parent="ButtonBase">
-        <item name="android:background">@drawable/app_button_background_secondary</item>
+        <item name="android:background">@drawable/button_primary_secondary_background</item>
         <item name="android:textColor">@color/primary</item>
     </style>
 
@@ -93,19 +93,19 @@
     </style>
 
     <style name="ButtonDanger" parent="ButtonBase">
-        <item name="android:background">@drawable/app_button_background_danger</item>
+        <item name="android:background">@drawable/button_danger_background</item>
         <item name="android:textColor">@color/white</item>
     </style>
 
     <style name="ButtonDangerSecondary" parent="ButtonBase">
-        <item name="android:background">@drawable/app_button_background_danger_secondary</item>
+        <item name="android:background">@drawable/button_danger_secondary_background</item>
         <item name="android:textColor">@color/error</item>
     </style>
 
     <style name="CustomizableButton" parent="Widget.AppCompat.Button">
         <item name="android:layout_width">65dp</item>
         <item name="android:layout_height">25dp</item>
-        <item name="android:background">@drawable/app_button_customizable</item>
+        <item name="android:background">@drawable/customizable_button</item>
         <item name="android:textColor">@color/black</item>
         <item name="android:textSize">10sp</item>
         <item name="android:gravity">center</item>
@@ -114,7 +114,7 @@
 
     <!-- EditText -->
     <style name="EditTextBase" parent="Widget.AppCompat.EditText">
-        <item name="android:background">@drawable/app_edittext_background</item>
+        <item name="android:background">@drawable/bg_edittext</item>
         <item name="android:padding">10dp</item>
         <item name="android:paddingStart">12dp</item>
         <item name="android:paddingEnd">12dp</item>
@@ -123,15 +123,25 @@
     </style>
 
     <!--  Typography   -->
+    <style name="Paragraph">
+        <item name="android:textColor">@color/grey_700</item>
+        <item name="android:textSize">14sp</item>
+    </style>
     <style name="Heading3">
         <item name="android:textColor">@color/gray_900</item>
         <item name="android:textSize">28sp</item>
         <item name="android:textStyle">bold</item>
         <item name="android:lineSpacingExtra">5sp</item>
     </style>
+    <style name="Heading4">
+        <item name="android:textColor">@color/grey_800</item>
+        <item name="android:textSize">17sp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:lineSpacingExtra">4sp</item>
+    </style>
     <style name="Heading5">
         <item name="android:textColor">@color/gray_600</item>
-        <item name="android:textSize">22sp</item>
+        <item name="android:textSize">16sp</item>
         <item name="android:textStyle">bold</item>
         <item name="android:lineSpacingExtra">4sp</item>
     </style>
@@ -153,4 +163,21 @@
         <item name="android:indeterminateTint">@color/white</item>
     </style>
 
+    <!--  Chip  -->
+    <style name="PostChip" parent="Widget.MaterialComponents.Chip.Action">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textSize">10sp</item>
+        <item name="chipMinHeight">24dp</item>
+        <item name="textStartPadding">7dp</item>
+        <item name="textEndPadding">7dp</item>
+        <item name="chipBackgroundColor">@color/black</item>
+        <item name="ensureMinTouchTargetSize">false</item>
+    </style>
+    <style name="PostChipQna" parent="PostChip">
+        <item name="android:text">Q&amp;A</item>
+        <item name="android:textColor">#5B21B6</item>
+        <item name="chipBackgroundColor">#265B21B6</item>
+    </style>
 </resources>
